<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mycards">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="502dp"
        android:layout_height="819dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318"
        app:srcCompat="@drawable/background" />

    <Button
        android:id="@+id/btn_pay2"
        android:layout_width="138dp"
        android:layout_height="68dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/btn_pay2"
        app:backgroundTint="#FF5722"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_select"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_cardname6"
        android:layout_width="288dp"
        android:layout_height="52dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_cardname6"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_cardexp6"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/et_cardexp6"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cardnumber6"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_cardcvv6"
        android:layout_width="70dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="224dp"
        android:layout_marginRight="224dp"
        android:ems="10"

        android:inputType="numberSigned"
        android:text="@string/et_cardcvv6"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cardexp6"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_cardnumber6"
        android:layout_width="288dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/et_cardnumber6"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cardname6"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_addanother"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_marginTop="80dp"
        android:onClick="saveCard"
        android:text="@string/btn_addanother2"
        app:backgroundTint="#228B22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_cardcvv6"
        app:layout_constraintTop_toBottomOf="@+id/et_cardnumber6" />

    <Button
        android:id="@+id/btn_select"
        android:layout_width="138dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="92dp"
        android:onClick="viewAll"
        android:text="@string/btn_select2"
        app:backgroundTint="#E91E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="263dp"
        android:layout_height="94dp"
        android:layout_marginTop="16dp"
        android:text="MY PAYMENT METHODS"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="56dp"
        android:onClick="updateCard"
        android:text="@string/btn_update"
        app:backgroundTint="#FFB700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cardcvv6" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:onClick="deleteCard"
        android:text="@string/btn_delete"
        app:backgroundTint="#DC143C"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_update" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="40dp"
        android:text="Expiry          :"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="104dp"
        android:layout_height="20dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="48dp"
        android:text="Card Num   :"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="40dp"
        android:text="CVV             :"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="106dp"
        android:layout_height="26dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="176dp"
        android:text="Card Name :"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>